--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,12 @@ services:
   db:
     image: postgres:9.6.16
     volumes:
-      - postgresql_data:/var/lib/postgresql/data
+      - postgresql_data:/var/lib/postgresql/data:cached
   web:
     image: diveintohacking/docker-compose-rails-6:0.0.4
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
-      - .:/app
+      - .:/app:cached
     environment:
       - BUNDLE_PATH=/app/vendor/bundle
     ports:
